# mylibs

./: .gitignore  README  gen.py  pyproject.toml  requirements.txt  setup.py  workflow.md
.github/workflows/: main.yml
discription_for_llm/: uv_analysis.md  uv_analysis.py  uv_analysis.txt
documents_for_llm/: uv_file.md  uv_file.py  uv_file.txt
for_create_solventbox/: create_MCHbox.py  test.py  topo.top
samples/Cooling_plot/: UVVis_cooling.py  sample_cooling_file.txt  uv.py
src/DFT/: gjf.py
src/base_utils/: cui_utils.py  cui_utils.pyi  decoraters.py  decoraters.pyi  pipeline.py  pipeline.pyi  plotlib.py  plotlib.pyi  typecheck.py  typecheck.pyi
src/core/: __init__.py  __init__.pyi  cui_utils.py  cui_utils.pyi  fast_molecules.py  fast_molecules.pyi  gro.py  gro.pyi  molecules.py  molecules.pyi  pipeline.py  pipeline.pyi  plotlib.py  plotlib.pyi  temp.py  temp.pyi  typecheck.py  xyz.py  xyz.pyi
src/core.egg-info/: PKG-INFO  SOURCES.txt
src/core/gromacs/: calculation.py  calculation.pyi  pre_coordinator.py  rosette_maker.py  rosette_maker.pyi
src/core/gromacs/DefaultFiles/: MCH.itp  em.mdp  generate_xtc.sh  grommp.sh  mdrun.sh  ovito.sh  runtime_solvation.py  solvation.py  solvation.sh  v_rescale_c_rescale.mdp
src/gromacs/: __init__.py  analyzing.py  analyzing.pyi  calculation.py  calculation.pyi  itp.py  itp.pyi  martini.py  mdp.py  metad.py  pre_coordinator.py  pre_coordinator.pyi  relax.py  relax.pyi  rosette_maker.py  rosette_maker.pyi  slurm.py  top.py  top.pyi
src/gromacs/DefaultFiles/: MCH.gro  MCH_solventbox.gro  add_mchitp.py  awh_setting.mdp  barmethod.mdp  em.mdp  em_ovito.sh  generate_xtc.sh  grommp.sh  mdrun.sh  nose_hoover_parinello_rahman.mdp  runtime_solvation.py  runtime_solvation.sh  solvation.py  top_mod.py  v_rescale_c_rescale.mdp
src/model_fitting/: fitting.py  fitting.pyi
src/mole/: __init__.py  connected_molecules.py  fast_molecules.py  fast_molecules.pyi  gro.py  gro.pyi  molecules.py  molecules.pyi  pdb.py  pdb.pyi  xyz.py  xyz.pyi
src/mylib/: __init__.py  cui_utils.py  cui_utils.pyi  plotlib.py  plotlib.pyi
tests/DFT/: test_gjf.py
tests/gromacs/: test_calculation_json.py  test_itp.py  test_metad.py  test_precoordinator.py  test_relax.py
tests/mole/: PhNaph.xyz  PhNaph_rot.xyz  test_connected_molecules.py  test_xyz.py
