[project]
name = "yagaiG-libs"
version = "0.2.9"
authors = [{ name = "Yuhei Yamada", email = "tamanisikamiani@gmail.com" }]
description = "This library contains a mixture of code that can be used with YagaiG's measuring equipment and code for MD. In fact, it should have a more decent structure, but it was too much trouble, so we packaged it as it is."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic",
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "annotated-types",
    "pydantic-settings",
    "pydantic-core",
    "python-dotenv",
    "typing_extensions",
    "pyparsing",
    "lmfit",
    "ref-for-llm",
    "rdkit",
    "pandas-stubs>=2.3.3.251201",
    "scipy-stubs>=1.16.3.2",
]


[project.optional-dependencies]
dev = ["build", "twine", "mypy"]

[tool.setuptools.package-data]
"gromacs" = ["DefaultFiles/*"]

[tool.uv.sources]
ref-for-llm = { git = "https://github.com/IndigoCarmine/ref_for_llm.git" }

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "vermin>=1.7.0",
]
