[project]
name = "yagaiG-libs"
version = "0.2.19"
authors = [{ name = "Yuhei Yamada", email = "tamanisikamiani@gmail.com" }]
description = "This library contains a mixture of code that can be used with YagaiG's measuring equipment and code for MD. In fact, it should have a more decent structure, but it was too much trouble, so we packaged it as it is."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic",
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "annotated-types",
    "pydantic-settings",
    "pydantic-core",
    "python-dotenv",
    "typing_extensions",
    "pyparsing",
    "lmfit",
    "ref-for-llm",
    "rdkit",
    "pandas-stubs",
    "scipy-stubs",
]


[project.optional-dependencies]
dev = ["build", "twine", "mypy"]

[tool.setuptools.package-data]
"gromacs" = ["DefaultFiles/*"]

[tool.uv.sources]
ref-for-llm = { git = "https://github.com/IndigoCarmine/ref_for_llm.git" }

[tool.mypy]
# MDAnalysis ships no type stubs; don't fail type-checking on its imports.
[[tool.mypy.overrides]]
module = ["MDAnalysis", "MDAnalysis.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "vermin>=1.7.0",
]
